--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "symfony/event-dispatcher": "^5.4|^6.0|^7.0",
         "symfony/form": "^5.4|^6.0|^7.0",
         "symfony/framework-bundle": "^5.4|^6.0|^7.0",
-        "symfony/http-kernel": "^^5.4|^6.0|^7.0",
+        "symfony/http-kernel": "^5.4|^6.0|^7.0",
         "symfony/options-resolver": "^5.4|^6.0|^7.0",
         "symfony/property-access": "^5.4|^6.0|^7.0",
         "easycorp/easyadmin-bundle": "^3.4 || ^v4.0",
